# settle-down-backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  manage.py  pyproject.toml
.github/workflows/: ci.yml
backend_api/: api.py  models.py  money.py  ocr.py  schemas.py  serializer.py  services.py  settleup_api.py  settleup_utils.py  utils.py
backend_api/dataclasses/: llm7_override.py  receipt_item.py
backend_api/dto/: receipt_item.py  settleup.py
backend_api/tests/: conftest.py  test_create_transaction.py  test_ocr_agent.py  test_ocr_agent_live.py  test_ocr_validator.py  test_transaction.py
settledown/: api.py  asgi.py  settings.py  urls.py  wsgi.py
